# Effects

./: CMakeLists.txt  GraphicsSceneTest.pro  README.md  api.txt  assets.cpp  assets.h  graphicsview.cpp  graphicsview.h  graphnode.cpp  graphnode.h  graphnodescene.cpp  graphnodescene.h  graphtest.cpp  graphtest.h  icons.qrc  images.qrc  listwidget.cpp  listwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  materialsettingswidget.cpp  materialsettingswidget.h  materialsettingswidget.ui  materialwriter.cpp  nodegraph.cpp  nodegraph.h  nodemodel.cpp  nodemodel.h  notes.txt  properties.cpp  properties.h  propertylistwidget.cpp  propertylistwidget.h  propertylistwidget.ui  scenewidget.cpp  scenewidget.h  shaderassetwidget.cpp  shaderassetwidget.h  (+12 more)
assets/: effect_template1.json  preview.frag  surface.frag  surface.vert
core/: exporter.h  guidhelper.h  materialhelper.cpp  materialhelper.h  materialwriter.cpp  materialwriter.h  project.h  sockethelper.cpp  texturemanager.cpp  texturemanager.h  undoredo.cpp  undoredo.h
dialogs/: createnewdialog.cpp  createnewdialog.h  searchdialog.cpp  searchdialog.h
generator/: shadercontext.cpp  shadercontext.h  shadergenerator.cpp  shadergenerator.h
graph/: connectionmodel.cpp  connectionmodel.h  graphicsview.cpp  graphicsview.h  graphnode.cpp  graphnode.h  graphnodescene.cpp  graphnodescene.h  graphtest.h  library.cpp  library.h  nodegraph.cpp  nodegraph.h  nodemodel.cpp  nodemodel.h  socket.cpp  socketconnection.cpp  socketconnection.h  sockethelper.cpp  sockethelper.h  socketmodel.cpp  socketmodel.h  sockets.h
irisgl/src/widgets/: renderwidget.cpp  renderwidget.h
models/: connectionmodel.cpp  library.cpp  libraryv1.cpp  libraryv1.h  nodemodel.cpp  nodemodel.h  properties.cpp  properties.h  socketmodel.cpp
nodes/: generated.h  libraryv1.cpp  libraryv1.h  math.cpp  math.h  object.cpp  object.h  test.cpp  test.h  texture.cpp  texture.h  utils.h  vector.cpp  vector.h  view.h
propertywidgets/: basepropertywidget.cpp  basepropertywidget.h  floatpropertywidget-old.h  floatpropertywidget.cpp  floatpropertywidget.h  intpropertywidget.cpp  intpropertywidget.h  propertywidgetbase.cpp  propertywidgetbase.h  texturepropertywidget.cpp  texturepropertywidget.h  vectorpropertywidget.cpp  vectorpropertywidget.h  widerangespinbox.cpp  widerangespinbox.h
widgets/: graphicsview.cpp  listwidget.cpp  listwidget.h  materialsettingswidget.cpp  materialsettingswidget.h  propertylistwidget.cpp  propertylistwidget.h  scenewidget.cpp  scenewidget.h  shaderassetwidget.cpp  shaderassetwidget.h  shaderlistwidget.cpp  shaderlistwidget.h  treewidget.cpp  treewidget.h
